--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2 class="japan-title">国内リーグ</h2>
         <div class="title-line"></div>
         <img src="img/5449b697-c41c-6895-060f-ad148e0b7afd.jpg" alt="Jリーグ" width="1000px" height="600px">
-        <a href="https://ntsoccer.github.io/Jleague/" class="to-link">詳しくはこちら</a>
+        <a href="https://ntsoccer.github.io/Jleague/" class="btn-open">詳しくはこちら</a>
       </div>   
     </section>
 
@@ -51,7 +51,7 @@
           <h2 class="foreign-title">欧州リーグ</h2>
           <div class="title-line"></div>
           <img src="img/IMG_2130.jpg" alt="海外リーグ" width="1000px" height="600px">
-          <a href="https://ntsoccer.github.io/foreignleague/" class="to-link">詳しくはこちら</a>  
+          <a href="https://ntsoccer.github.io/foreignleague/" class="btn-open">詳しくはこちら</a>  
         </div>
     </section>
 
